<resources>
    <string name="app_name">Trivia App</string>
    <string name="full_name">Enter Your Name</string>
    <string name="start_game">Start</string>
    <string name="quiz">Quiz</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="trivia_app">Trivia APp</string>
    <string name="submit">submit</string>
    <string name="please_select_option">Please Select Option</string>
    <string name="summary">Summary</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game">Game 1</string>
    <string name="name">Name :</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
</resources>