<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/summary"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_answer_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:layout_marginTop="@dimen/padding_10_dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/finish"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/history"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>